--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Handy Projects Delivered with Care</h1>
                     <p class="home__description">Enjoy the charm of handmade and handwritten creations, delivered to you with care and unique personal touches.</p>
-                    <a href="#" class="button">Enquire Today </a>
+                    <a href="#" class="button">Call Today On +91 7990496421 </a>
                 </div>   
             </div>
         </section>
@@ -208,7 +208,7 @@
                 <div class="footer__content">
                     <h3 class="footer__title">Our Services</h3>
                     <ul>
-                        <li><a href="#" >Hampers Customized</a></li>
+                        <li><a href="#" class="footer__link">Hampers Customized</a></li>
                         <li><a href="#" class="footer__link">Chhab Decoration</a></li>
                         <li><a href="#" class="footer__link">Handmade Projects</a></li>
                         <li><a href="#" class="footer__link">Handwritten Assignments</a></li>
