--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h2 class="section-title-center">Delivering you the best hampers <br>At minimal costing.</h2>
                     <p class="share__description">Celebrate the holidays with handmade gifts! Share your love with creative, personalized crafts using supplies from our store. Let’s make this season unforgettable together!</p>
                     <p> Call Now On +91 7990496421</p>
-                    <a href="#" class="button">Send a Gift</a>
+                   <!-- <a href="#" class="button">Send a Gift</a> -->
                 </div>
 
                 <div class="share__img">
